Refactor repository code