@@ -49,8 +49,7 @@ public class FileChannelRepository implements ChannelRepository {
 
     @Override
     public List<Channel> findAll() {
-        return channelMap.values().stream()
-                .collect(Collectors.toList());
+        return channelMap.values().stream().toList();
     }
 
     @Override
