@@ -61,8 +61,7 @@ public class FileUserRepository implements UserRepository {
 
     @Override
     public List<User> findAll() {
-        return userMap.values().stream()
-                .collect(Collectors.toList());
+        return userMap.values().stream().toList();
     }
 
     @Override
