@@ -31,8 +31,7 @@ public class JCFMessageRepository implements MessageRepository {
 
     @Override
     public List<Message> findAll() {
-        return messageMap.values().stream()
-                .collect(Collectors.toList());
+        return messageMap.values().stream().toList();
     }
 
     @Override
